examples/good/01-01-types.see
void main() {
    int n = 21; printInt(n);
    n = 15; printInt(n);

    string s = "Hello World"; printStr(s);
    s = "Hello"; printStr(s);

    bool b = true; printBool(b);
    b = false; printBool(b);

    return;
}
