examples/bad/in/02-03-comparison.see
void main() {
    int x = 1;
    bool y = true;
    if (x == y) {
        printStr("Not a valid comparison");
    }

    return;
}